fixed stretched out image

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,16 @@ body {
     font-size: 250%;
   }
 }
+
+@media screen and (min-width: 768px) {
+  #about-img {
+    height: 50%;
+  }
+}
+@media screen and (min-width: 1107px) {
+  #about-img {
+    height: 100%;
+  }
+}
+
+/* 1106 - 768 */
